--- a/src/ember-app/app/templates/application.hbs
+++ b/src/ember-app/app/templates/application.hbs
@@ -11,7 +11,7 @@
     onHidden=(action "updateWidth")
   )
 }}
-  {{flexberry-sitemap-guideline 
+  {{flexberry-sitemap-guideline
  sitemap=sitemap class="flexberry-sitemap"}}
 {{/flexberry-sidebar}}
 <div class="bgw-fix">
@@ -41,6 +41,9 @@
       <img class="ui centered image" src="assets/images/flexberry-logo.png" />
     </a>
     <div class="page-header-caption"><a href="#">{{t "application-name"}}</a></div>
+    <button class="ui icon button" onclick={{action 'addTestData'}}>
+      {{t "forms.application.sitemap.add-new-data"}}
+    </button>
   </div>
 </div>
 <div id="example" class="pusher">
